# R2P2-ESP32

./: .gitignore  .gitmodules  CLAIDE.md  Rakefile  Rakefile.docker  m5unified_api.yaml  memo.txt  run_container.sh  sdkconfig.defaults  test__
.devcontainer/: Dockerfile  build.sh  devcontainer.json  dockerfile  run_devcontainer.sh
components/uart-file-transfer/: CMakeLists.txt
components/uart-file-transfer/client/: transfer_client.rb
components/uart-file-transfer/src/: fs_proxy.c
docker/: Dockerfile  build.sh
main/: CMakeLists.txt  main.c
mrbgem/: CMakeLists.txt
patch/: CMakeLists.txt  xtensa-esp.rb
scripts/: apply_m5unified_patch.sh
storage/home/: m5.rb
tool/: make_function_table.rb
